--- a/challenge2/page2.html
+++ b/challenge2/page2.html
@@ -7,17 +7,27 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <div>
+    
+   <div class="header">
+    <div class="wrapper">
+    <div class="header-text">
     <h1>Lorem ipsum dolor sit amet consectetur.</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, aspernatur quos. Mollitia libero aliquid impedit aperiam cum facilis quaerat cupiditate veniam voluptatum harum! Enim, tenetur! Consectetur illum doloribus aliquid culpa.</p>
+    
+</div>
    </div>
-
-   <section>
+</div>
+   <section class="hero">
+    <div class="wrapper">
+    <div class="hero-text">
     <h2>Lorem ipsum dolor sit amet consectetur.</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor omnis a numquam nulla corrupti autem ex delectus? Qui, quos? Adipisci voluptatum facere, iusto modi magnam architecto incidunt ab dolores.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor omnis a numquam nulla corrupti autem ex delectus? Qui, quos? Adipisci voluptatum facere, iusto modi magnam architecto incidunt ab dolores.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor omnis a numquam nulla corrupti autem ex delectus? Qui, quos? Adipisci voluptatum facere, iusto modi magnam architecto incidunt ab dolores.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et dolor omnis a numquam nulla corrupti autem ex delectus? Qui, quos? Adipisci voluptatum facere, iusto modi magnam architecto incidunt ab dolores.</p>
+</div>
+
+</div>
    </section>
 </body>
 </html>
