--- a/index.html
+++ b/index.html
@@ -5,8 +5,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Porject</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>Challenge 8</h1>
+  <header>
+    <div class="container">
+      <div class="row row-nav">
+        <h1>CRL</h1>
+        <ul class="nav-item row">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">sing in</a></li>
+          <li class="btn"><a href="#">sing up</a></li>  
+        </ul>
+      </div>
+    </div>
+  </header>
+  <section class="hero">
+    <div class="container">
+      <div class="row-hero">
+        <div class="hero-h1-box">
+          <h1> <span class="hero-h1">Responsive layout</span>  don't have to be struggle</h1>
+        </div>
+        <div class="hero-text">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet culpa aut fugit magni natus cumque ullam delectus maxime, nesciunt modi cupiditate officiis, veritatis asperiores odio vel molestiae nisi dicta. Recusandae?</p>
+          <a href="#" class="btn">i want to learn</a>
+        </div> 
+      </div>
+    </div>
+  </section>
+  <section class="section-two">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h2>Mobile-first</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consectetur cumque officiis! Sed unde rem assumenda sapiente impedit ut veritatis, </p>
+        </div>
+        <div class="col">
+          <h2>Efficient</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consectetur cumque officiis! Sed unde rem assumenda sapiente impedit ut veritatis, sint cumque </p>
+        </div>
+        <div class="col">
+          <h2>Done right</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae consectetur cumque officiis! Sed unde rem assumenda sapiente impedit ut veritatis, sint cumque </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section-three">
+    <div class="container">
+      <div class="parent">
+
+        <div class="leftbox">
+          <h2>It doesn't have to be so hard</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis ipsa sed voluptas quasi blanditiis aliquam beatae ullam rerum natus nesciunt earum doloribus hic sunt, incidunt aliquid quo iste debitis ipsum?</p>
+          <figure>
+            <img src="./hero-img.jpg" alt="web design">
+          </figure>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex dolore ducimus reiciendis esse, id recusandae velit laborum doloremque debitis vel exercitationem dolores porro distinctio. Id quos harum impedit sit architecto?</p>
+        </div>
+        <div class="rightbox">
+          <div>
+            <h3>Break it down</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi unde tempore aspernatur hic aperiam. Veniam neque culpa cupiditate. Cupiditate, quam.</p>
+          </div>
+          <div>
+            <h3>Work your way up</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi unde tempore aspernatur hic aperiam. Veniam neque culpa cupiditate. Cupiditate, quam.</p>
+          </div>
+          <div>
+        
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi unde tempore aspernatur hic aperiam. Veniam neque culpa cupiditate. Cupiditate, quam.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <footer>
+    <div class="container">
+      <h2>Just scratching the surface</h2>
+
+      <div class="row">
+        <div class="col2">
+          <h3>About our company</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque dolorum ab ut, vero velit quod atque inventore sunt numquam voluptatibus.</p>
+        </div>
+        <div class="col1">
+          <h3>Getting around</h3>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col1">
+          <h3>Other things</h3>
+          <ul>
+          <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Lorem.</a></li>
+            <li><a href="#">Lorem, ipsum.</a></li>
+          </ul>
+        </div>
+        <div class="col1">
+          <h3>And  more..</h3>
+          <ul>
+            <li><a href="#">Lorem, ipsum.</a></li>
+            <li><a href="#">Lorem, ipsum.</a></li>
+            <li><a href="#">Lorem, ipsum.</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
